<resources>
    <string name="app_name">Notice Board</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- menu drawer strings -->
    <string name="ads_cat1">Объявления</string>
    <string name="my_ads">Мои Объявления</string>
    <string name="my_favorite">Избранное</string>
    <string name="default_list">Лента категории</string>
    <string name="ads_car">Автомобили</string>
    <string name="ads_pc">Компьютеры</string>
    <string name="ads_smartphone">Смартфоны</string>
    <string name="ads_ds">Бытовая техника</string>
    <string name="ads_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_log_in">Вход</string>
    <string name="ac_log_out">Выход</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>

    <!-- Sign Dialog -->
    <string name="email_reset_password_was_sent">На вашу почту было отправлено пистмо для восстановления пароля</string>
    <string name="reset_pass_text">Для восстановления пароля укажите адрес почты указанной при регистрации</string>
    <string name="dialog_reset_email_message">Укажите Email для восстановления пароля</string>
    <string name="invalid_email">Email указан неверно</string>
    <string name="email_hint">Email</string>
    <string name="guest">Гость</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="reset_password">Восстановить</string>
    <string name="sign_up_error">Неудалось зарегистрироваться</string>
    <string name="sign_in_error">Неудалось войти</string>
    <string name="sent_verification_done">На вашу почту было отправлено пистмо для подтверждения перейдите по ссылке из письма</string>
    <string name="sent_verification_email_error">Неудалось отправить письмо подтверждения</string>

    <!-- SignUp Dialog -->
    <string name="link_done">Email подключен к Google аккаунту</string>
    <string name="link_exception">Для этого Email уже создана учетная запись через гугл аккаунт, войдите через гугл аккаунт</string>

    <!-- EditActivity -->
    <string name="no_result"> нет результата</string>
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>
    <string name="no_country_selected">Страна не выбрана!</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="index">Индекс</string>
    <string name="tel">Телефон</string>
    <string name="email">Email</string>
    <string name="tel_hint">Номер телефона</string>
    <string name="mail_hint">Адрес электонной почты</string>
    <string name="notice_title">Заголовок</string>
    <string name="notice_title_hint">*Заголовок</string>
    <string name="category">Категория</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Укажите цену</string>
    <string name="description">Описание</string>
    <string name="description_hint">*Напишите подробно</string>
    <string name="with_send">Возможна отправка</string>
    <string name="publish">Опубликовать</string>

    <!-- ReadActivity -->
    <string name="priceTitle">Цена:</string>
    <string name="countryTitle">Страна:</string>
    <string name="cityTitle">Город:</string>
    <string name="withSentTitle">Возможна отправка:</string>
    <string name="telTitle">Телефон:</string>
    <string name="withSent">Возможна отправка</string>
    <string name="withOutSent">Отправка не возможна</string>
</resources>